Better support for Records in JDBC (#868)
* Switch to 2.2.2 now released

* Remove extra space